@@ -15,38 +15,26 @@
 
 package org.zirco.controllers;
 
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
 
+import org.zirco.model.DbAdapter;
 import org.zirco.model.DownloadItem;
 import org.zirco.ui.components.ZircoWebView;
-import org.zirco.utils.IOUtils;
 
+import android.content.Context;
 import android.content.SharedPreferences;
-import android.util.Log;
 
 /**
  * Controller implementation.
  */
 public final class Controller {
 	
-	private static final String ADBLOCK_WHITELIST_FILE = "adblock-whitelist";
-	
 	private SharedPreferences mPreferences;
 
 	private List<ZircoWebView> mWebViewList;
 	private List<DownloadItem> mDownloadList;
-	private List<String> mAdBlockWhiteList;
+	private List<String> mAdBlockWhiteList = null;
 	
 	/**
 	 * Holder for singleton implementation.
@@ -72,7 +60,6 @@ public final class Controller {
 	 */
 	private Controller() {
 		mDownloadList = new ArrayList<DownloadItem>();
-		loadAdBlockWhiteList();
 	}
 		
 	/**
@@ -125,101 +112,24 @@ public final class Controller {
 	
 	/**
 	 * Get the list of white-listed url for the AdBlocker.
+	 * @param context The current context.
 	 * @return A list of String url.
-	 */
-	public List<String> getAdBlockWhiteList() {
+	 */	
+	public List<String> getAdBlockWhiteList(Context context) {
+		if (mAdBlockWhiteList == null) {
+			DbAdapter db = new DbAdapter(context);
+			db.open();
+			mAdBlockWhiteList = db.getWhiteList();
+			db.close();
+		}
 		return mAdBlockWhiteList;
 	}
 	
 	/**
-	 * Save the ad blocker white list.
+	 * Reset the AdBlock white list, so that it will be reloaded.
 	 */
-	public void saveAdBlockWhiteList() {
-		File rootFolder = IOUtils.getApplicationFolder();
-		
-		if (rootFolder != null) {
-			
-			File adBlockFile = new File(rootFolder, ADBLOCK_WHITELIST_FILE);
-			
-			if (adBlockFile != null) {
-				
-				try {
-					FileWriter fstream = new FileWriter(adBlockFile);
-					BufferedWriter out = new BufferedWriter(fstream);
-					
-					Iterator<String> iter = mAdBlockWhiteList.iterator();
-					while (iter.hasNext()) {
-						out.write(iter.next() + "\n");
-					}
-					
-					out.flush();
-					out.close();
-					
-				} catch (IOException e) {
-					Log.w("AdBlockWhiteList", "Unable to save AdBlockWhiteList: " + e.getMessage());
-				}								
-				
-			} else {
-				Log.w("AdBlockWhiteList", "Unable to save AdBlockWhiteList.");
-			}
-		} else {
-			Log.w("AdBlockWhiteList", "Unable to save AdBlockWhiteList.");
-		}
-	}
-
-	/**
-	 * Build a default ad blocker white list.
-	 */
-	private void loadDefaultAdBlockWhiteList() {
-		mAdBlockWhiteList.add("google.com/reader");
-		saveAdBlockWhiteList();
-	}
-	
-	/**
-	 * Load the ad blocker white list.
-	 */
-	private void loadAdBlockWhiteList() {
-		
-		mAdBlockWhiteList = new ArrayList<String>();
-		
-		File rootFolder = IOUtils.getApplicationFolder();
-		
-		if (rootFolder != null) {
-			
-			File adBlockFile = new File(rootFolder, ADBLOCK_WHITELIST_FILE);
-			
-			if (adBlockFile != null) {
-				
-				try {
-					String line;
-					InputStream is = new FileInputStream(adBlockFile);
-					BufferedReader reader = new BufferedReader(new InputStreamReader(is));
-					
-					while ((line = reader.readLine()) != null) {
-						if (line.length() > 0) {
-							mAdBlockWhiteList.add(line);
-						}
-					}
-					
-					is.close();
-					
-				} catch (FileNotFoundException e) {
-					Log.w("AdBlockWhiteList", "Unable to load AdBlockWhiteList: " + e.getMessage());
-					mAdBlockWhiteList.clear();
-					loadDefaultAdBlockWhiteList();
-				} catch (IOException e) {
-					Log.w("AdBlockWhiteList", "Unable to load AdBlockWhiteList: " + e.getMessage());
-					mAdBlockWhiteList.clear();
-					loadDefaultAdBlockWhiteList();
-				}
-				
-			} else {
-				loadDefaultAdBlockWhiteList();
-			}
-			
-		} else {
-			loadDefaultAdBlockWhiteList();
-		}
-	}
+	public void resetAdBlockWhiteList() {
+		mAdBlockWhiteList = null;
+	}		
 	
 }
