@@ -3,6 +3,7 @@
 - The start page can be customized.
 - The start page can show a search box.
 - The browser user agent can be customized.
+- The ad blocker white list is now stored in database.
 
 0.3.2:
 - Added start page, showing most used bookmarks and recent history.
